<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sebastian.scislak.pokerstatistics.Activities.SaveDataAfter"
    android:orientation="vertical"
    android:weightSum="15">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_activity_save_data_after"
        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_weight="14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_save_id_table"
                android:textSize="20dp"
                android:gravity="center"
                android:paddingTop="12dp"/>

            <TextView
                android:id="@+id/id_table_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_save_data_option_0"
                android:textSize="20dp"
                android:gravity="center"
                android:paddingTop="12dp"/>

            <TextView
                android:id="@+id/balance_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_gravity="center" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_save_data_option_1"
                android:textSize="20dp"
                android:gravity="center"
                android:paddingTop="12dp"/>

            <TextView
                android:id="@+id/time_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_save_data_option_3"
                android:textSize="20dp"
                android:gravity="center"
                android:paddingTop="12dp"/>

            <TextView
                android:id="@+id/count_tables_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_save_data_option_2"
                android:textSize="20dp"
                android:gravity="center"
                android:paddingTop="12dp"/>

            <TextView
                android:id="@+id/max_player_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_gravity="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorSeparatorSaving"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_save_data_after_header"
                android:gravity="center"
                android:textSize="24dp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorSeparatorSaving"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textSize="20dp"
                android:text="The session stop time"/>

            <EditText
                android:id="@+id/time_edit_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="hh:mm"
                android:paddingTop="5dp"
                android:inputType="datetime"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textSize="20dp"
                android:text="Account balance after the session"/>

            <EditText
                android:id="@+id/id_account_balance_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textSize="20dp"
                android:text="Played hands" />

            <EditText
                android:id="@+id/id_played_hands"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textSize="20dp"
                android:text="Going to flop"/>

            <EditText
                android:id="@+id/id_going_to_flop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textSize="20dp"
                android:text="Going to flop without blinds"/>

            <EditText
                android:id="@+id/id_going_to_flop_without_blinds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textSize="20dp"
                android:text="Winning"/>

            <EditText
                android:id="@+id/id_winning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textSize="20dp"
                android:text="Winning without show hands"/>

            <EditText
                android:id="@+id/id_winning_without_show_hands"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:inputType="number"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:text="@string/button_activity_save_data_after"
            android:textSize="18dp"
            android:onClick="Saving"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:src="@drawable/info"
            android:onClick="SavingInfo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:text="Delete this session"
            android:textSize="18dp"
            android:onClick="DeleteSession"/>
    </LinearLayout>
</LinearLayout>
